Add enum Ressources, Pass players to ArrayList, implement allocateCards()